* enum.c (nmin_filter): Fix limit value.   patch by Helder Pereira.   [Bug #11471] [ruby-core:70477]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52026 b2dd03c8-39d4-4d8f-98ff-823fe69b080e